--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+      			<groupId>com.google.guava</groupId>
+      			<artifactId>guava</artifactId>
+      			<version>27.1-jre</version>
+    		</dependency>
+    		<dependency>
+      			<groupId>junit</groupId>
+      			<artifactId>junit</artifactId>
+      			<version>4.13.1</version>
+      		<scope>test</scope>
+    		</dependency>
 	</dependencies>
 
 	<build>
@@ -35,8 +46,48 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+          			<groupId>org.sonarsource.scanner.maven</groupId>
+          			<artifactId>sonar-maven-plugin</artifactId>
+          			<version>3.7.0.1746</version>
+        		</plugin>
+			<plugin>
+          			<groupId>org.jacoco</groupId>
+          			<artifactId>jacoco-maven-plugin</artifactId>
+          			<version>0.8.6</version>
+        </plugin>
 		</plugins>
 		<finalName>spring-boot-docker</finalName>
 	</build>
+<profiles>
+    <profile>
+      <id>coverage</id>
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>prepare-agent</id>
+                <goals>
+                  <goal>prepare-agent</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>report</id>
+                <goals>
+                  <goal>report</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 
 </project>
